Bug 1853797 - HTMLInputElement.showPicker should show the picker on GeckoView even if type is month or week. r=geckoview-reviewers,emilio,ohall

This seems to be a regression by bug 1824323. If we turn on
`dom.forms.datetime.others=true`, we should dispatch `MozOpenDateTimePicker`
event simply.

Differential Revision: https://phabricator.services.mozilla.com/D194760